# remote-shutdown

./: CMakeLists.txt  README.md  main.c  server.h
test/: stop-req  suspend-req  suspend-req-with-secret  suspend-req-with-wrong-secret  test-req
utils/: simple-message.h  stringops.h
